--- a/public/css/style.css
+++ b/public/css/style.css
@@ -368,7 +368,7 @@ a:focus {
     transition: all .3s;
     overflow: hidden;
     box-shadow: 5px 5px 5px -5px rgba(0,0,0,.2);
-    border: solid #fff 10px;
+    /* border: solid #fff 10px; */
 }
 
 .product_section .box .img-box {
