--- a/views/admin/allproducts.hbs
+++ b/views/admin/allproducts.hbs
@@ -52,7 +52,7 @@
                 {{!-- <th scope="row">{{this.productname}}</th> --}}
                 <td>
                     <li>
-                        <img src="uploads/{{this.image}}" style="height:60px;,width:60px;" />
+                        <img src="uploads/{{this.image}}" style="width: 70px;height:60px;"/>
                     </li>
                 </td>
                 <td>{{this.productname}}</td>
