--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,7 +44,7 @@
                                 <div class="detail-box">
                                     <h1>
                                         <span>
-                                            Sale 20% Off
+                                            Sale 35% Off
                                         </span>
                                         <br>
                                         On Everything
@@ -55,7 +55,7 @@
                                         veniam, vel architecto veritatis delectus repellat modi impedit sequi.
                                     </p>
                                     <div class="btn-box">
-                                        <a href="" class="btn1">
+                                        <a href="/users/allproducts1" class="btn1">
                                             Shop Now
                                         </a>
                                     </div>
@@ -71,7 +71,7 @@
                                 <div class="detail-box">
                                     <h1>
                                         <span>
-                                            Sale 20% Off
+                                            Sale 50% Off
                                         </span>
                                         <br>
                                         On Everything
@@ -82,7 +82,7 @@
                                         veniam, vel architecto veritatis delectus repellat modi impedit sequi.
                                     </p>
                                     <div class="btn-box">
-                                        <a href="" class="btn1">
+                                        <a href="/users/allproducts1" class="btn1">
                                             Shop Now
                                         </a>
                                     </div>
@@ -417,14 +417,14 @@
                         </div>
                     </div>
                     <div class="img-box">
-                        <img src="../uploads/{{this.image}}" alt="" style="width: fit-content">
+                        <img src="../uploads/{{this.image}}" alt="" style="width:fit-content">
                     </div>
                     <div class="detail-box">
                         <h5>
                             {{this.productname}}
                         </h5>
                         <h6>
-                            ${{this.price}}
+                            Rs.{{this.price}}
                         </h6>
                     </div>
                 </div>
