--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="img-box">
-                        <img src="../uploads/{{this.image}}" alt="" style="width: fit-content">
+                        <img src="../uploads/{{this.image}}">
                     </div>
                     <div class="detail-box">
                         <h5>
