--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,6 +1,6 @@
-<form action="/users/loggedin" method="post">
+ <form action="/users/loggedin" method="post">
     <section class="vh-100" style="background-color: #9A616D;">
-        <div class="container py-5 h-100">
+        <div class="container py-5 h-10">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
@@ -10,7 +10,7 @@
                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                                <div >
+                                <div class="card-body p-4 p-lg-6 text-black">
 
 
                                     <div class="d-flex align-items-center mb-3 pb-1">
@@ -52,4 +52,5 @@
             </div>
         </div>
     </section>
-</form>
+</form> 
+
