--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
                 <div class="carousel-item active">
                     <div class="container ">
                         <div class="row">
-                            <div class="col-md-7 col-lg-6 ">
+                            <div class="col-md-6 col-lg-6 ">
                                 <div class="detail-box">
                                     <h1>
                                         <span>
@@ -433,11 +433,20 @@
 
 
         </div>
-        <div class="btn-box">
-            <a href="/users/allproducts1">
-                Our Premium Products
-            </a>
-        </div>
+        <br>    
+       <nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      {{!-- <a class="page-link" href="#" tabindex="-1">Previous</a> --}}
+    </li>
+    <li class="page-item"><a class="page-link" href="/users/allproducts1">1</a></li>
+    <li class="page-item"><a class="page-link" href="/users/allproducts2">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      {{!-- <a class="page-link" href="#">Next</a> --}}
+    </li>
+  </ul>
+</nav>
     </div>
 </section>
 <!-- end product section -->
