--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,4 +1,4 @@
- <form action="/users/loggedin" method="post">
+<form action="/users/loggedin" method="post">
     <section class="vh-100" style="background-color: #9A616D;">
         <div class="container py-5 h-10">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -7,7 +7,7 @@
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block " style="height: 100% !important;">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                    alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+                                    alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-6 text-black">
@@ -40,7 +40,11 @@
 
                                     {{!-- <a class="small text-muted" href="#!">Forgot password?</a> --}}
                                     <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
-                                            href="/users/signup" style="color: #393f81;">Register here</a></p>
+                                            href="/users/signup" style="color: #393f81;">Register here</a>
+                                            <br>
+                                            <a href="/users/forgotpassword"> Forgot Password</a>
+
+                                    </p>
                                     <a href="#!" class="small text-muted">Terms of use.</a>
                                     <a href="#!" class="small text-muted">Privacy policy</a>
 
@@ -52,5 +56,4 @@
             </div>
         </div>
     </section>
-</form> 
-
+</form>
