--- a/views/users/forgotpassword.hbs
+++ b/views/users/forgotpassword.hbs
@@ -126,7 +126,7 @@
 
                                     <div class="form-group">
                                         <button class="btn btn-lg btn-primary btn-block" id="resetPasswordBtn"
-                                            disabled>Reset Password</button>
+                                            >Reset Password</button>
                                     </div>
                                 </form>
                             </div>
