user verification setup

--- a/views/users/otp.hbs
+++ b/views/users/otp.hbs
@@ -63,7 +63,7 @@
 
             let otpStartTime;
             let countdownTimer;
-            console.log(otpStartTime)
+            console.log(otpStartTime,'jiijijij')
             validateOTPButton.addEventListener("click", function () {
                 const enteredOTP = document.getElementById("otpInput").value;
                 const id = document.getElementById("id").value;
