--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
                 <div class="carousel-item active">
                     <div class="container ">
                         <div class="row">
-                            <div class="col-md-6 col-lg-6 ">
+                            <div class="col-sm-6 col-md-6 col-lg-6 ">
                                 <div class="detail-box">
                                     <h1>
                                         <span>
@@ -433,7 +433,7 @@
 
 
         </div>
-        <br>    
+        <br>
        <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item disabled">
