--- a/views/users/moredetails.hbs
+++ b/views/users/moredetails.hbs
@@ -288,8 +288,7 @@
                             </div> --}}
                             {{!-- <span class="review-no">41 reviews</span> --}}
                         </div>
-                        <p class="product-description">Suspendisse quos? Tempus cras iure temporibus? Eu laudantium
-                            cubilia sem sem! Repudiandae et! Massa senectus enim minim sociosqu delectus posuere.</p>
+                        <p class="product-description">{{data.description}}.</p>
                         <h4 class="price">current price: <span>Rs:{{data.price}}</span></h4>
                         {{!-- <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong> --}}
                         </p>
