--- a/views/admin/allproducts.hbs
+++ b/views/admin/allproducts.hbs
@@ -41,6 +41,7 @@
                 <th>Image</th>
                 <th>Product Name</th>
                 <th>Quantity</th>
+                <th>Description</th>
                 <th>Price</th>
                 <th>Category</th>
                 <th>Actions</th>
@@ -57,6 +58,7 @@
                 </td>
                 <td>{{this.productname}}</td>
                 <td>{{this.quantity}}</td>
+                <td>{{this.description}}</td>
                 <td>{{this.price}}</td>
                 <td>{{this.category}}</td>
                 <td>
