multer size setup

--- a/views/admin/editproduct.hbs
+++ b/views/admin/editproduct.hbs
@@ -42,6 +42,7 @@ height: 60px;
       <input type="number" name="quantity" class="form-control" value="{{data.quantity}}" 
         placeholder="Quantity">
     </div>
+    <img src="../uploads/{{data.image}}" style="height: 150px;">
     
     <hr>
     <div class="form-group mt-3">
