--- a/views/admin/addproduct.hbs
+++ b/views/admin/addproduct.hbs
@@ -50,7 +50,7 @@ height: 60px;
     
     <hr>
     <div class="form-group mt-3">
-      <label class="mr-2">Upload your Image:</label>
+ <p class="text-muted mb-0">Allowed JPG, GIF or PNG. Max size of 5MB</p>      <label class="mr-2">Upload your Image:</label>
       <input type="file" name="image" required>
     </div>
     <hr>
