--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
         <div class="slider_bg_box">
             <img src="images/slider-bg.jpg" alt="">
         </div>
-        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="container ">
