cash on delivery

--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -67,7 +67,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         {{!-- <h6 class="collapse-header">Custom Utilities:</h6> --}}
                         <a class="collapse-item" href="/admin/products">All Products</a>
-                        <a class="collapse-item" href="/users/adminAddProduct">Add Products</a>
+                        <a class="collapse-item" href="/admin/adminAddProduct">Add Products</a>
                         {{!-- <a class="collapse-item" href="utilities-animation.html">Edit Products</a> --}}
                         {{!-- <a class="collapse-item" href="utilities-other.html">Other</a> --}}
                     </div>
