--- a/views/admin/addproduct.hbs
+++ b/views/admin/addproduct.hbs
@@ -21,7 +21,7 @@ height: 60px;
     now</a> --}}
   {{!-- <h1>Getform.io HTML Form Example with File Upload</h1> --}}
   {{!-- enctype="multipart/form-data" --}}
-  <form action="/admin/getProduct" method="POST" enctype="multipart/form-data" >
+  <form action="/admin/addproduct" method="POST" enctype="multipart/form-data" >
     <div class="form-group">
       <label for="exampleInputName">Product Name</label>
       <input type="text" name="productname" class="form-control" 
