--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -106,11 +106,12 @@
                         </a>
                     </li>
 
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="text" placeholder="Search"
+                    <form class="form-inline" action="/users/search" method="post">
+                        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="text" placeholder="Search" name="search"
                             aria-label="Search">
                         <button class="btn my-2 my-sm-0 nav_search-btn" type="submit"><i class="fa fa-search"
-                                aria-hidden="true"></i></button>
+                                aria-hidden="true"></i>
+                        </button>
                     </form>
 
 
@@ -137,7 +138,7 @@
                                 {{!-- <a class="dropdown-item" href="#">PROFILE</a> --}}
                                 <a class="dropdown-item" href="/users/profile">View Profile</a>
                                 <a class="dropdown-item" href="/users/cart">CARTS</a>
-                                 <a class="dropdown-item" href="/users/orders">My Orders</a>
+                                <a class="dropdown-item" href="/users/orders">My Orders</a>
                                 <a class="dropdown-item" href="/users/changepassword">Change Password</a>
 
 
