--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -85,7 +85,7 @@
                             {{this.productname}}
                         </h5>
                         <h6>
-                            ${{this.price}}
+                         Rs.{{this.price}}
                         </h6>
                     </div>
                 </div>
