--- a/views/index.hbs
+++ b/views/index.hbs
@@ -555,3 +555,47 @@
 
     </p>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+   $(document).ready(function () {
+      $('.box .option1').click(function (e) {
+         e.preventDefault();
+         var productId = $(this).attr('href').split('/').pop();
+         var productCount = $(this).closest('.box').find('.badge').text();
+         $.ajax({
+            type: 'GET',
+            url: '/users/addcart/' + productId,
+            success: function (response) {
+               console.log(response)
+               if(response === false){
+                  Swal.fire({
+                     icon: 'warning',
+                     title: 'Out of Stock!',
+                     text: 'Item will be added back.',
+                     width: '300px',
+                  });
+               }
+               else{
+                  if (typeof response === 'number') {
+                     console.log(response)
+                     var newCount = response;
+                     
+                     $('.fa-shopping-cart + .badge').text(newCount);
+                     Swal.fire({
+                        icon: 'success',
+                        title: 'Success!',
+                        text: 'Item successfully added to the cart.',
+                        width: '300px',
+                     });
+                  }
+                  else {
+                     location.href = "/users/login";
+                  }
+               }
+            }
+         });
+      });
+   });
+</script>
+
